# scroller

./: CMakeLists.txt  LICENSE  README.md  main.cpp  scroller.kdev4  scroller.sln  scroller.vcxproj  scroller.vcxproj.filters  utf8_decode.c  utf8_decode.h
package/: PKGBUILD  make_osx.sh
